added navbar index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+    <!-- Home -->
+    <li class="nav-item active">
+      <div class="active-bg"></div>
+      <a href="#" class="nav-link">Home</a>
+    </li>
+
+    <!-- About -->
+    <li class="nav-item">
+      <a href="#" class="nav-link">About</a>
+    </li>
+
+    <!-- Work -->
+    <li class="nav-item">
+      <a href="#" class="nav-link">Work</a>
+    </li>
+
+    <!-- More dropdown -->
+    <li class="nav-item" style="position:relative;">
+      <button class="dropdown-btn" id="moreBtn">
+        More
+      </button>
+      <div class="dropdown-menu" id="moreMenu">
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Resume</a>
+      </div>
+    </li>
+
+    <!-- Book a Call -->
+    <li class="nav-item">
+      <button class="cta-btn">Book a Call</button>
+    </li>
+  </nav>
 </body>
 </html>
