--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <li class="nav-item" style="position:relative;">
       <button class="dropdown-btn" id="moreBtn">
         More
+          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
+              fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="m6 9 6 6 6-6"/>
+            </svg>
       </button>
       <div class="dropdown-menu" id="moreMenu">
         <a href="#">Blog</a>
